# Diagora-Engine

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  server.js
DeliveryForeCastEngine/: .env.example  .gitignore  Dockerfile  dev-requirements.txt  requirements.txt
DeliveryForeCastEngine/docs/source/: conf.py  index.rst  src.delivery_forecast.rst  src.rst  src.schedulers.rst  src.services.rst
DeliveryForeCastEngine/src/: main.py
DeliveryForeCastEngine/src/delivery_forecast/: forecasting.py
DeliveryForeCastEngine/src/infrastructure/: dependency_injection.py
DeliveryForeCastEngine/src/infrastructure/config/: supabase_config.py
DeliveryForeCastEngine/src/schedulers/: scheduler.py
DeliveryForeCastEngine/src/services/: database_service.py
ItinaryEngine/: Cargo.toml
ItinaryEngine/src/: error.rs
ItinaryEngine/src/core/: path.rs  point.rs
ItinaryEngine/src/execution_flow/: create_itinary.rs  update_itinary.rs
ItinaryEngine/src/types/: adress.rs  config_update.rs  error_message.rs  mod.rs  requested_path.rs
MissingEngine/src/: main.py
MissingEngine/src/repartition/: repartition.py
MissingEngine/src/services/: database.py  file_descriptor.py
src/: error.rs  main.rs  prelude.rs
src/core/: mod.rs  path.rs  point.rs
src/execution_flow/: args_handling.rs  create_itinary.rs  mod.rs  update_itinary.rs
src/point/: mod.rs
src/types/: adress.rs  config.rs  config_create.rs  config_update.rs  graphical_point.rs  mod.rs  requested_path.rs
src/utils/: http.rs  mod.rs  writer.rs
(+6 files in other folders)
