[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
ordered-float = {version ="3.7.0", features = ["serde"]}
reqwest = {version = "0.11.18", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
tokio = "1.29.1"
